--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "css-loader": "^6.7.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "style-loader": "^3.3.1",
