--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "moment": "^2.29.1",
+    "moralis": "^1.5.6",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^1.3.5",
     "react-scripts": "5.0.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
