--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "moment": "^2.29.1",
     "moralis": "^1.5.6",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-countdown": "^2.3.2",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.5",
     "react-scripts": "5.0.0",
