--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.5",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.1"
   },
   "scripts": {
     "start": "craco start",
